<resources>
    <string name="app_name">Frases LMG</string>
    <string name="et_email">Email</string>
    <string name="et_pwd">Contraseña</string>
    <string name="et_pwd_repeat">Confirmar Contraseña</string>
    <string name="et_alias">Nombre de usuario</string>



    <string name="btn_acceder">Acceder</string>
    <string name="btn_login">Registrarse</string>
    <string name="btn_logout">Cerrar sesion</string>
    <string name="btn_google">Iniciar sesion con Google</string>
    <string name="btn_save">Guardar</string>
    <string name="btn_recover">Recuperar</string>
    <string name="btn_new_user">Nuevo usuario</string>
    <string name="btn_abort">Cancelar</string>
    <string name="btn_edit">Editar</string>

    <string name="name">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="municipio">Municipio</string>
    <string name="phrase">Frases</string>
    <string name="telefono">Telefono</string>
    <string name="user">Usuario</string>
    <string name="group">Grupos</string>>
    <string name="añadir">Añadir</string>

</resources>
